# mentascribe-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: HANDOFF.md  implementation-plan.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
images/: tiny_demo.mov
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: client.rs  mod.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs
src-tauri/src/dictionary/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/injection/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/stats/: mod.rs
src-tauri/src/text/: mod.rs
src-tauri/src/transcription/: cloud.rs  mod.rs  voxtral.rs  voxtral_ffi.rs  whisper.rs
src-tauri/voxtral/: voxtral.c  voxtral_kernels.c  voxtral_metal.m
src/components/: DictationBar.tsx  History.tsx  MenuBar.tsx  Settings.tsx  TranscriptionOverlay.tsx
src/components/dashboard/: Dashboard.tsx  DictionaryPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx  Sidebar.tsx
src/config/: widget.ts
src/lib/: dictionaryStore.ts  historyStore.ts  statsStore.ts  store.ts  tauri.ts  theme.tsx
src/styles/: globals.css
src/types/: index.ts
