[package]
name = "mentascribe-desktop"
version = "1.0.0"
description = "MentaScribe Desktop - Voice-to-text dictation"
authors = ["MentaFlux"]
license = "Proprietary"
repository = "https://github.com/mentaflux/mentascribe"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Audio
cpal = "0.15"
hound = "3.5"

# Speech-to-text
whisper-rs = "0.11"

# Hotkey
global-hotkey = "0.5"

# Text injection
enigo = "0.2"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Secure storage
keyring = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"
lazy_static = "1.5.0"
dirs = "6.0.0"

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
