[package]
name = "mentascribe-desktop"
version = "1.0.0"
description = "MentaScribe Desktop - Voice-to-text dictation"
authors = ["MentaFlux"]
license = "Proprietary"
repository = "https://github.com/mentaflux/mentascribe"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Audio
cpal = "0.15"
hound = "3.5"

# Speech-to-text (CoreML feature added via macOS target section below)
whisper-rs = "0.11"

# Hotkey
global-hotkey = "0.5"

# Text injection
enigo = "0.2"
arboard = "3"  # Cross-platform clipboard

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Secure storage
keyring = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"
lazy_static = "1.5.0"
once_cell = "1.19"
dirs = "6.0.0"

# Dashboard data management
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
cocoa = "0.25"
objc = "0.2"
foreign-types = "0.5"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
# Enable CoreML for Apple Neural Engine acceleration on macOS
whisper-rs = { version = "0.11", features = ["coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation"
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xtest"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
